Fix alignment of attribute panel display

--- a/client/src/app/components/attributes-panel/attribute-color/attributes-color.component.scss
+++ b/client/src/app/components/attributes-panel/attribute-color/attributes-color.component.scss
@@ -1,7 +1,3 @@
-.offset {
-    margin-left: 10px;
-}
-
 .grid-color-selected {
     display: grid;
     grid-gap: 10px;
